# job_search

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py
backend/app/core/: __init__.py  config.py  logging.py  middleware.py
backend/app/domain/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/interfaces/: __init__.py
backend/app/modules/: __init__.py
backend/app/modules/ai_agents/: __init__.py
backend/app/modules/ai_gateway/: __init__.py
backend/app/modules/analytics/: __init__.py
backend/app/modules/compatibility/: __init__.py
backend/app/modules/documents/: __init__.py
backend/app/modules/identity/: __init__.py
backend/app/modules/jobs/: __init__.py
backend/app/modules/notifications/: __init__.py
backend/app/modules/profiles/: __init__.py
backend/app/modules/scheduling/: __init__.py
backend/tests/: test_config.py  test_health.py  test_logging.py
docs/: github-issues.md
docs/architecture/: configuration.md  development-tooling.md  implementation-rules.md  observability.md  overview.md
docs/roadmap/: roadmap.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/app/: App.test.tsx  App.tsx
